--- a/public/css/body.css
+++ b/public/css/body.css
@@ -1,3 +1,13 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 
+body {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
 
 /*# sourceMappingURL=body.css.map */
