--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -1,3 +1,160 @@
-/*
-    todo.css
-*/
+.pd-5 {
+  padding: 5px;
+}
+
+.pd-top-2 {
+  padding-top: 2px;
+}
+
+.mg-left-2 {
+  margin-left: 2px;
+}
+
+.mg-right-2 {
+  margin-right: 2px;
+}
+
+.mg-top-2 {
+  margin-top: 2px;
+}
+
+.mg-bottom-2 {
+  margin-bottom: 2px;
+}
+
+.bd-radius-3 {
+  border-radius: 3px;
+}
+
+.font-15 {
+  font-size: 15px;
+}
+
+.pd-10 {
+  padding: 10px;
+}
+
+.pd-top-4 {
+  padding-top: 4px;
+}
+
+.mg-left-4 {
+  margin-left: 4px;
+}
+
+.mg-right-4 {
+  margin-right: 4px;
+}
+
+.mg-top-4 {
+  margin-top: 4px;
+}
+
+.mg-bottom-4 {
+  margin-bottom: 4px;
+}
+
+.bd-radius-6 {
+  border-radius: 6px;
+}
+
+.font-20 {
+  font-size: 20px;
+}
+
+.pd-15 {
+  padding: 15px;
+}
+
+.pd-top-6 {
+  padding-top: 6px;
+}
+
+.mg-left-6 {
+  margin-left: 6px;
+}
+
+.mg-right-6 {
+  margin-right: 6px;
+}
+
+.mg-top-6 {
+  margin-top: 6px;
+}
+
+.mg-bottom-6 {
+  margin-bottom: 6px;
+}
+
+.bd-radius-9 {
+  border-radius: 9px;
+}
+
+.font-25 {
+  font-size: 25px;
+}
+
+.pd-20 {
+  padding: 20px;
+}
+
+.pd-top-8 {
+  padding-top: 8px;
+}
+
+.mg-left-8 {
+  margin-left: 8px;
+}
+
+.mg-right-8 {
+  margin-right: 8px;
+}
+
+.mg-top-8 {
+  margin-top: 8px;
+}
+
+.mg-bottom-8 {
+  margin-bottom: 8px;
+}
+
+.bd-radius-12 {
+  border-radius: 12px;
+}
+
+.font-30 {
+  font-size: 30px;
+}
+
+.pd-25 {
+  padding: 25px;
+}
+
+.pd-top-10 {
+  padding-top: 10px;
+}
+
+.mg-left-10 {
+  margin-left: 10px;
+}
+
+.mg-right-10 {
+  margin-right: 10px;
+}
+
+.mg-top-10 {
+  margin-top: 10px;
+}
+
+.mg-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.bd-radius-15 {
+  border-radius: 15px;
+}
+
+.font-35 {
+  font-size: 35px;
+}
+/*# sourceMappingURL=todo.css.map */
