--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,22 @@
 </head>
 
 <body>
+  <!-- Header -->
+  <header>
+    <!-- Title Bar -->
+    <div>
+      <h1>TODO Service</h1>
+      <button>☰ Menu</button>
+    </div>
+    <!-- Search Bar -->
+    <div>
+      <input type="text" name="input_search" id="input_search">
+    </div>
+  </header>
 
+  <div>
+    <!-- Kanban here -->
+  </div>
 </body>
 
 </html>
