--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -1,9 +1,131 @@
+input {
+  outline: none;
+  border: 0px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  line-height: 2;
+  margin-left: 1em;
+}
+
+#header {
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  font-size: 23px;
+  font-weight: 700;
+  line-height: 50px;
+  z-index: 200;
+}
+
+.search-blank {
+  position: relative;
+  border: 1px solid lightgray;
+  border-radius: 7px;
+  width: 280px;
+  height: 32px;
+}
+
+.search-blank:focus-within {
+  border: 1px solid #0366d6;
+  display: block;
+  -webkit-box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+          box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+}
+
+.search-box {
+  position: relative;
+  width: 260px;
+  padding: 0 0 0 15px;
+}
+
+.search-input {
+  z-index: 205;
+}
+
+.block {
+  display: block;
+}
+
+.search-btn {
+  position: absolute;
+  top: 5px;
+  left: 0;
+}
+
+.search-btn > img {
+  width: 18px;
+  height: 18px;
+}
+
+.flex-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* Card, listView, inputView */
+.card {
+  background-color: #f6f8fa;
+  padding: 5px;
+  border: 1px solid #dddee2;
+  border-radius: 6px;
+  margin: 10px;
+  width: 355px;
+  min-height: 600px;
+}
+
+.list-view {
+  background-color: #ffffff;
+  border: 1px solid #dddee2;
+  margin: 7px;
+  border-radius: 6px;
+  padding: 10px;
+  position: relative;
+}
+
+.title {
+  margin-bottom: 0.7em;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+}
+
+.search-btn > img {
+  width: 18px;
+  height: 18px;
+}
+
 .pd-5 {
   padding: 5px;
 }
 
 .pd-top-2 {
   padding-top: 2px;
+}
+
+.mg-2 {
+  margin: 2px;
 }
 
 .mg-left-2 {
@@ -38,6 +160,10 @@
   padding-top: 4px;
 }
 
+.mg-4 {
+  margin: 4px;
+}
+
 .mg-left-4 {
   margin-left: 4px;
 }
@@ -68,6 +194,10 @@
 
 .pd-top-6 {
   padding-top: 6px;
+}
+
+.mg-6 {
+  margin: 6px;
 }
 
 .mg-left-6 {
@@ -102,6 +232,10 @@
   padding-top: 8px;
 }
 
+.mg-8 {
+  margin: 8px;
+}
+
 .mg-left-8 {
   margin-left: 8px;
 }
@@ -134,6 +268,10 @@
   padding-top: 10px;
 }
 
+.mg-10 {
+  margin: 10px;
+}
+
 .mg-left-10 {
   margin-left: 10px;
 }
@@ -156,5 +294,69 @@
 
 .font-35 {
   font-size: 35px;
+}
+
+.font-12 {
+  font-size: 12px;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.gray {
+  color: gray;
+}
+
+.mg-top-40 {
+  margin-top: 40px;
+}
+
+.mg-left-40 {
+  margin-left: 40px;
+}
+
+.mg-right-40 {
+  margin-right: 40px;
+}
+
+.mg-bottom-40 {
+  margin-bottom: 40px;
+}
+
+.mg-bottom-20 {
+  margin-bottom: 20px;
+}
+
+.mg-top-210 {
+  margin-top: 210px;
+}
+
+.mg-top-30 {
+  margin-top: -30px;
+}
+
+.mg-top-20 {
+  margin-top: 20px;
+}
+
+.mg-left-20 {
+  margin-left: 20px;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.bg-black {
+  background-color: black;
+}
+
+.font-white {
+  color: white;
 }
 /*# sourceMappingURL=todo.css.map */
