--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -1,4 +1,94 @@
-$main-bg-color: #eaecef
+$--color-main-bg: #f6f8fa
+$--color-focus-shadow: rgba(3,102,214,0.3)
+$--color-main-gray: #dddee2
+
+input
+    outline: none
+    border: 0px
+    box-shadow: none
+    line-height: 2
+    margin-left: 1em
+
+#header
+    width: 100%
+    height: 50px
+    background-color: black
+    font-size: 23px
+    font-weight: 700
+    line-height: 50px
+    z-index: 200
+
+.search-blank
+    position: relative
+    border: 1px solid lightgray
+    border-radius: 7px
+    width: 280px
+    height: 32px
+
+.search-blank:focus-within
+    border: 1px solid #0366d6
+    display: block
+    box-shadow: 0 0 0 3px $--color-focus-shadow
+
+.search-box
+    position: relative
+    width: 260px
+    padding: 0 0 0 15px
+
+.search-input
+    z-index: 205
+
+.block
+    display: block
+
+.search-btn
+    position: absolute
+    top: 5px
+    left: 0
+.search-btn>img
+    width: 18px
+    height: 18px
+
+.flex-left
+    display: flex
+    align-items: center
+    justify-content: left
+
+.flex
+    display: flex
+    align-items: center
+    justify-content: center
+
+/* Card, listView, inputView */
+.card
+    background-color: $--color-main-bg
+    padding: 5px
+    border: 1px solid $--color-main-gray
+    border-radius: 6px
+    margin: 10px
+    width: 355px
+    min-height: 600px
+
+.list-view
+    background-color: #ffffff
+    border: 1px solid $--color-main-gray
+    margin: 7px
+    border-radius: 6px
+    padding: 10px
+    position: relative
+
+.title
+    margin-bottom: 0.7em
+
+.close-btn
+    position: absolute
+    top: 10px
+    right: 5px
+.search-btn>img
+    width: 18px
+    height: 18px
+
+
 $i: 1
 @while $i <= 5
     .pd-#{$i*5} 
@@ -6,6 +96,9 @@ $i: 1
     
     .pd-top-#{$i*2}
         padding-top : (2px * $i)
+
+    .mg-#{$i*2}
+        margin: (2px * $i)
 
     .mg-left-#{$i*2}
         margin-left : (2px * $i)
@@ -26,3 +119,40 @@ $i: 1
         font-size : (10px + 5 * $i)
 
     $i : $i + 1
+
+.font-12
+    font-size: 12px
+.bold
+    font-weight: 700
+.gray
+    color: gray
+.mg-top-40
+    margin-top: 40px
+.mg-left-40
+    margin-left: 40px
+.mg-right-40
+    margin-right: 40px
+.mg-bottom-40
+    margin-bottom: 40px
+.mg-bottom-20
+    margin-bottom: 20px
+.mg-top-210
+    margin-top: 210px
+.mg-top-30
+    margin-top: -30px
+.mg-top-20
+    margin-top: 20px
+.mg-left-20
+    margin-left: 20px
+
+.float-left
+    float: left
+
+.float-right
+    float: right
+
+.bg-black
+    background-color: black
+
+.font-white
+    color: white
