style : search-box 레이아웃 생성
- search-box에 레이아웃 생성

--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -1,5 +1,6 @@
 $header-background : #000000
 $header-font-color : #ffffff
+$common-border-color :#b9b8b8
 
 .header
     font-size: 30px
@@ -8,3 +9,14 @@ $header-font-color : #ffffff
     display: flex
     justify-content: space-between
     padding: 20px 50px
+
+.kanban-board
+    padding: 20px
+
+.search-box
+    box-sizing: border-box
+    width: 400px
+    border: 1px solid $common-border-color
+    border-radius: 10px
+    height: 40px
+    padding: 10px
