feat : 옵져버 패턴을 위해 코드 수정/추가, 전체 과정은 app.js에서 실행
- 옵져버 패턴을 위하여 코드 수정 및 추가
- Model, View, Controller 모두 선언 후 관계 정립
- View의 Element와 createTodo 함수를 Controller에 등록
- Model이 자신의 데이터를 controller의 인자로 넣으면, controller가 동작하여 등록된 view을 렌더링

--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -26,6 +26,7 @@ $todo-card-background : #ffffff
 .todo-list
     display: flex
     margin-top: 10px
+    column-gap: 20px
     .todo-header
         height: 25px
         justify-content: space-between
