--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -64,6 +64,7 @@ $todo-card-background : #ffffff
             background: $todo-card-background
             border-radius: 10px
             padding: 20px
+            margin-bottom: 10px
             &--delete-button
                 position: absolute
                 top: 10px
