Add listview layout 리스트뷰를 요구사항에 맞게 꾸미고 구현에 용이하도록 임시 구분해 두었습니다.

--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -92,6 +92,11 @@ input {
   min-height: 600px;
 }
 
+.card-header {
+  position: relative;
+  margin: 7px;
+}
+
 .list-view {
   background-color: #ffffff;
   border: 1px solid #dddee2;
@@ -105,6 +110,15 @@ input {
   margin-bottom: 0.7em;
 }
 
+.task {
+  margin-left: 1.5em;
+}
+
+.author {
+  margin-left: 1em;
+  margin-top: 0.7em;
+}
+
 .close-btn {
   position: absolute;
   top: 10px;
@@ -114,6 +128,15 @@ input {
 .search-btn > img {
   width: 18px;
   height: 18px;
+}
+
+.close-btn > img {
+  width: 14px;
+  height: 14px;
+}
+
+.htop {
+  top: 0;
 }
 
 .pd-5 {
