--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -69,6 +69,10 @@ input
     width: 355px
     min-height: 600px
 
+.card-header
+    position: relative
+    margin: 7px
+
 .list-view
     background-color: #ffffff
     border: 1px solid $--color-main-gray
@@ -80,6 +84,13 @@ input
 .title
     margin-bottom: 0.7em
 
+.task
+    margin-left: 1.5em
+
+.author
+    margin-left: 1em
+    margin-top: 0.7em
+
 .close-btn
     position: absolute
     top: 10px
@@ -87,7 +98,11 @@ input
 .search-btn>img
     width: 18px
     height: 18px
-
+.close-btn>img
+    width: 14px
+    height: 14px
+.htop
+    top: 0
 
 $i: 1
 @while $i <= 5
