--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -1,6 +1,7 @@
 $--color-main-bg: #f6f8fa
 $--color-focus-shadow: rgba(3,102,214,0.3)
 $--color-main-gray: #dddee2
+$--color-main-green: #34B370
 
 input
     outline: none
@@ -73,6 +74,41 @@ input
     position: relative
     margin: 7px
 
+.add-list-view
+    display: block
+    margin-bottom: 3em
+    text-align: center
+
+.list-input
+    width: 95%
+    min-height: 70px
+    border-radius: 5px
+    resize: vertical
+    padding: 0.5em
+    margin-bottom: 0.5em
+    border: 1px solid $--color-main-gray
+
+.list-input:focus-within
+    border: 1px solid #0366d6
+
+.btn-add-list
+    width: 48%
+    float: left
+    background-color: $--color-main-green
+    border-radius: 5px
+    color: #ffffff
+    font-size: 16px
+    padding: 0.5em
+
+.btn-cancel-list
+    width: 48%
+    float: right
+    background-color: #ffffff
+    border: 1px solid lightgray
+    border-radius: 5px
+    font-size: 16px
+    padding: 0.5em
+
 .list-view
     background-color: #ffffff
     border: 1px solid $--color-main-gray
@@ -104,6 +140,8 @@ input
 .htop
     top: 0
 
+
+/*   *******   */
 $i: 1
 @while $i <= 5
     .pd-#{$i*5} 
