--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -97,10 +97,21 @@ input {
   margin: 7px;
 }
 
+.card-count {
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: lightgray;
+  text-align: center;
+  line-height: 25px;
+}
+
 .add-list-view {
   display: block;
   margin-bottom: 3em;
   text-align: center;
+  margin: 0 7px 50px 7px;
 }
 
 .list-input {
@@ -109,8 +120,8 @@ input {
   border-radius: 5px;
   resize: vertical;
   padding: 0.5em;
-  margin-bottom: 0.5em;
   border: 1px solid #dddee2;
+  font-size: 15px;
 }
 
 .list-input:focus-within {
@@ -125,6 +136,7 @@ input {
   color: #ffffff;
   font-size: 16px;
   padding: 0.5em;
+  disabled: disabled;
 }
 
 .btn-cancel-list {
