--- a/public/css/body.css
+++ b/public/css/body.css
@@ -1,13 +1,14 @@
 html {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  font-family: sans-serif;
 }
 
 body {
-  display: flex;
-  width: 100%;
+  width: 75%;
   height: 100%;
-  justify-content: center;
 }
 
 /*# sourceMappingURL=body.css.map */
