--- a/public/css/container.css
+++ b/public/css/container.css
@@ -1,7 +1,15 @@
 #container {
-  background-color: aqua;
-  width: 75%;
+  background-color: white;
+  display: block;
+  width: 100%;
   height: 100%;
+}
+#container .hidden {
+  display: none;
+}
+#container #todo-list {
+  background-color: #f3f3f3;
+  height: 400px;
 }
 
 /*# sourceMappingURL=container.css.map */
