--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,22 @@
-
+header {
+  display: block;
+  width: 100%;
+  height: 40px;
+  font-family: sans-serif;
+  background-color: black;
+}
+header span {
+  display: inline-block;
+}
+header #title {
+  color: white;
+}
+header #menu {
+  color: white;
+}
+header nav {
+  width: 100%;
+  height: 100%;
+}
 
 /*# sourceMappingURL=header.css.map */
