--- a/sass/container.scss
+++ b/sass/container.scss
@@ -1,5 +1,13 @@
 #container{
-    background-color: aqua;
-    width:75%;
+    background-color: white;
+    display: block;
+    width:100%;
     height:100%;
+    .hidden{
+        display:none;
+    }
+    #todo-list{
+        background-color: rgb(243,243,243);
+        height: 400px;
+    }
 }
