update README.md 1일차 한 일을 정리하였습니다.

--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -107,7 +107,7 @@ input {
   line-height: 25px;
 }
 
-.add-list-view {
+.input-list-view {
   display: block;
   margin-bottom: 3em;
   text-align: center;
