--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -83,7 +83,7 @@ input
     text-align: center
     line-height: 25px
 
-.add-list-view
+.input-list-view
     display: block
     margin-bottom: 3em
     text-align: center
