--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -61,9 +61,9 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
