Add css for header, sections and items on UI
css를 추가하여 UI를 개선합니다.

--- a/public/css/container.css
+++ b/public/css/container.css
@@ -1,15 +1,77 @@
 #container {
   background-color: white;
-  display: block;
+  display: flex;
   width: 100%;
   height: 100%;
+  justify-content: space-around;
 }
 #container .hidden {
   display: none;
 }
-#container #todo-list {
+#container .section {
+  font-size: 16px;
   background-color: #f3f3f3;
-  height: 400px;
+  height: 700px;
+  width: 32%;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 0px 3px 0px 3px;
+}
+#container .section .section-add-btn {
+  font-size: 18px;
+  position: absolute;
+  top: 7px;
+  right: 38px;
+  border: none;
+}
+#container .section .section-delete-btn {
+  position: absolute;
+  right: 10px;
+  border: none;
+}
+#container .item {
+  position: relative;
+  font-size: 14px;
+  height: 60px;
+  width: 95%;
+  border-radius: 20px;
+  background-color: white;
+  display: block;
+  margin: 10px 0px 10px 0px;
+  padding: 5px 5px 5px 5px;
+  box-shadow: 1px 1px 1px 1px lightgray;
+}
+#container .item img {
+  position: absolute;
+  left: 10px;
+}
+#container .item .delete-btn {
+  position: absolute;
+  right: 10px;
+  top: 8px;
+  border-radius: 30px;
+  border: none;
+}
+#container .item .title {
+  position: absolute;
+  left: 30px;
+  top: 8px;
+}
+#container .item .author {
+  position: absolute;
+  left: 30px;
+  bottom: 20px;
+}
+#container #todo-section {
+  position: relative;
+}
+#container #todo-section #todo-list {
+  position: absolute;
+  display: block;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 90%;
+  width: 95%;
 }
 
 /*# sourceMappingURL=container.css.map */
