--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,17 +4,25 @@ header {
   height: 40px;
   font-family: sans-serif;
   background-color: black;
+  font-size: 25px;
 }
 header span {
   display: inline-block;
 }
 header #title {
   color: white;
+  position: absolute;
+  top: 4px;
+  left: 15px;
 }
 header #menu {
   color: white;
+  position: absolute;
+  top: 4px;
+  right: 15px;
 }
 header nav {
+  position: relative;
   width: 100%;
   height: 100%;
 }
