--- a/sass/header.scss
+++ b/sass/header.scss
@@ -4,16 +4,24 @@ header{
   height: 40px;
   font-family: sans-serif;
   background-color: black;
+  font-size:25px;
   span{
     display: inline-block;
   }
   #title{
     color:white;
+    position: absolute;
+    top:4px;
+    left:15px;
   }
   #menu{
     color:white;
+    position: absolute;
+    top:4px;
+    right:15px;
   }
   nav{
+    position:relative;
     width: 100%;
     height: 100%;
   }
