--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@
   color: #ffffff;
   font-size: 30px;
   font-weight: bold;
-  padding: 13px 0px 0px 50px;
+  padding: 13px 0px 0px 80px;
 }
 
 .navbar-menu {
@@ -18,5 +18,47 @@
   color: #ffffff;
   font-size: 30px;
   font-weight: bold;
-  padding: 13px 0px 0px 1450px;
+  padding: 13px 0px 0px 1400px;
+}
+
+.filter-contatiner {
+  width: 100%;
+  height: 60px;
+  margin: 10px 0 0 -8px;
+}
+
+.contents {
+  width: 100%;
+  height: 1000px;
+  margin: 0 0 0 140px;
+}
+
+.todo-container {
+  float: left;
+  width: 450px;
+  height: 700px;
+  margin: 5px 0 0 30px;
+  border-radius: 8px;
+  background-color: #dbdbdb;
+}
+
+.todo-title {
+  width: 420px;
+  height: 50px;
+  margin: 0 0 0 15px;
+  background-color: aquamarine;
+}
+
+.todo-contents {
+  width: 420px;
+  margin: 5px 0 0 15px;
+}
+
+.todo-items {
+  width: 420px;
+  height: 70px;
+  margin-top: 10px;
+  border: 1px solid #b1b1b1;
+  border-radius: 5px;
+  background-color: #fafafa;
 }
