--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -3,6 +3,7 @@ $header-font-color : #ffffff
 $common-border-color :#b9b8b8
 $todo-background-color : #e0e0e0
 $todo-card-background : #ffffff
+$add-button-background :  #3b9400
 
 .header
     font-size: 30px
@@ -69,3 +70,32 @@ $todo-card-background : #ffffff
                 position: absolute
                 top: 10px
                 right: 10px
+
+.add-todo-card
+    margin-bottom: 10px
+    &__input
+        box-sizing: border-box
+        padding: 10px
+        margin-bottom: 10px
+        width: 100%
+        height: 50px
+        border: 1px solid $common-border-color
+        border-radius: 5px
+
+    &__button-list
+        box-sizing: border-box
+        width: 100%
+        display: flex
+        justify-content: space-between
+        column-gap: 10px
+
+        .cancel-button, .add-button
+            border: 1px solid $common-border-color
+            border-radius: 5px
+            box-sizing: border-box
+            height: 40px
+            flex: 1 1 auto
+            cursor: pointer
+        .add-button
+            color : $header-font-color
+            background: $add-button-background
