--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -149,7 +149,12 @@ input
     height: 14px
 .htop
     top: 0
+.htop-add
+    top: 0
+    right: 25px   
 
+.none
+    display: none
 
 /*   *******   */
 $i: 1
@@ -185,6 +190,8 @@ $i: 1
 
 .font-12
     font-size: 12px
+.font-14
+    font-size: 14px
 .bold
     font-weight: 700
 .gray
