--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -52,7 +52,7 @@ $add-button-background :  #3b9400
     .todo
         box-sizing: border-box
         width: 500px
-        height: 600px
+        min-height: 600px
         border-radius: 10px
         background: $todo-background-color
         padding: 20px
@@ -66,6 +66,7 @@ $add-button-background :  #3b9400
             border-radius: 10px
             padding: 20px
             margin-bottom: 10px
+            border: 1px solid $common-border-color
             &--delete-button
                 position: absolute
                 top: 10px
