feat : 삭제 기능 구현
- todo list를 삭제하는 기능 구현

--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -71,6 +71,7 @@ $add-button-background :  #3b9400
                 position: absolute
                 top: 10px
                 right: 10px
+                cursor: pointer
 
 .add-todo-card
     margin-bottom: 10px
