Add search bar html, css and scss.

--- a/sass/container.scss
+++ b/sass/container.scss
@@ -39,6 +39,7 @@
             textArea{
                 border-radius: 4px;
                 width:100%;
+                resize: vertical;
             }
             button{
                 height: 35px;
