--- a/public/css/container.css
+++ b/public/css/container.css
@@ -42,6 +42,7 @@
 #container .section .add-panel textArea {
   border-radius: 4px;
   width: 100%;
+  resize: vertical;
 }
 #container .section .add-panel button {
   height: 35px;
