--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -1,5 +1,5 @@
-$header-background : #fef01b
-$header-font-color :#000000
+$header-background :#000000 
+$header-font-color : #fef01b
 $common-border-color :#b9b8b8
 $todo-background-color : #9bbbd4
 $todo-card-background : #ffffff
