--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,134 @@
 * {
     font-family: 'Apple SD Gothic Neo','Malgun Gothic', sans-serif;
 }
+
+.hidden {
+    display: none;
+}
+
+header{
+    height: 50px;
+    /* background-color: #ffd200; */
+}
+
+.container {
+    padding-top:20px;
+    width: 900px;
+    margin:auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.column{
+    background-color: #e3e3e3;
+    width: 300px;
+    border-radius: 5px;
+    border: 1px solid darkgray;
+    padding: 10px;
+}
+
+.column__header {
+    display: flex;
+    justify-content: space-between;
+}
+.column__header__text {
+    display: flex;
+}
+
+.column__header__text > .number {
+    min-width:15px;
+    height: 13px;
+    font-size: 12px;
+    line-height: 1;
+    border-radius: 6px;
+    padding-top: 4px;
+    margin-right: 4px;
+    background-color: whitesmoke;
+    text-align: center;
+}
+
+.column__header__buttons {
+    display: flex;
+}
+.column__header__buttons > div {
+    margin-left: 7px;
+}
+
+.column__header__buttons > .add-button:hover {
+    color:maroon
+}
+
+.column__note-container {
+    margin: 0;
+    padding: 10px 0px;
+    list-style: none;
+}
+
+.note{
+    position: relative;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    padding: 8px;
+    /* border: 1px solid darkgray; */
+    margin-bottom: 6px;
+}
+.note > .title {
+    font-size: 15px;
+}
+.note > .description {
+    font-size:13px;
+    margin-top: 5px;
+}
+.note:last-child {
+    margin-bottom:0px;
+}
+
+.note > .delete-button{
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 15px;
+    height: 15px;
+}
+
+.column__note-add {
+    margin-top: 5px;
+}
+
+.note-add__buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.note-add__buttons > button {
+    border: none;
+    width: 147px;
+    border-radius: 5px;
+    height: 40px;
+    font-size: 15px;
+}
+
+
+
+.note-add__buttons > .add-button {
+    background-color: lightgreen;
+}
+
+.note-add__textarea {
+    background-color: white;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    padding: 7px;
+
+}
+
+
+.note-add__textarea > textarea {
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    resize: vertical;
+    font-size: 15px;
+    width: 100%;
+}
