--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -170,7 +170,7 @@ input {
   margin-top: 0.7em;
 }
 
-.close-btn {
+.card-btn {
   position: absolute;
   top: 10px;
   right: 5px;
@@ -181,7 +181,7 @@ input {
   height: 18px;
 }
 
-.close-btn > img {
+.card-btn > img {
   width: 14px;
   height: 14px;
 }
