--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -137,14 +137,14 @@ input
     margin-left: 1em
     margin-top: 0.7em
 
-.close-btn
+.card-btn
     position: absolute
     top: 10px
     right: 5px
 .search-btn>img
     width: 18px
     height: 18px
-.close-btn>img
+.card-btn>img
     width: 14px
     height: 14px
 .htop
