--- a/stylesheets/todo.css
+++ b/stylesheets/todo.css
@@ -155,10 +155,13 @@ input {
   border-radius: 6px;
   padding: 10px;
   position: relative;
+  -webkit-box-shadow: 0px 1px 2px lightgray;
+          box-shadow: 0px 1px 2px lightgray;
 }
 
 .title {
   margin-bottom: 0.7em;
+  font-weight: 500;
 }
 
 .task {
