--- a/stylesheets/todo.sass
+++ b/stylesheets/todo.sass
@@ -126,9 +126,11 @@ input
     border-radius: 6px
     padding: 10px
     position: relative
+    box-shadow: 0px 1px 2px lightgray
 
 .title
     margin-bottom: 0.7em
+    font-weight: 500
 
 .task
     margin-left: 1.5em
