--- a/client/index.css
+++ b/client/index.css
@@ -20,7 +20,7 @@ header{
 }
 .container {
     padding-top:20px;
-    width: 900px;
+    width: 1200px;
     margin:auto;
     display: flex;
     flex-wrap: wrap;
@@ -138,4 +138,51 @@ header{
     resize: vertical;
     font-size: 15px;
     width: 100%;
+}
+
+.modal-background{
+    background: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.modal{
+    position: absolute;
+    top: 30%;
+    right: calc(50% - 250px);
+    background-color: white;
+    width: 500px;
+}
+
+.modal-header{   
+    padding: 12px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid lightgray;
+}
+
+.modal-content{
+    padding: 12px;
+}
+
+.modal-content > input{
+    width: 100%;
+    padding: 0;
+    box-sizing: border-box;
+    margin-top: 5px;
+}
+
+.modal-buttons{
+    padding: 12px;
+}
+
+.modal-buttons > button {
+    border: none;
+    width: 147px;
+    border-radius: 5px;
+    height: 40px;
+    font-size: 15px;
+    background-color: lightgreen;
 }
