Add color: lightgray

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,6 +22,7 @@ $sizes: map-merge(
 $color-white: #ffffff;
 $color-bright: #f7f7f8;
 $color-light: #eeeeee;
+$color-lightgray: #BFBFBF;
 $color-gray: #999999;
 $color-dark: #242526;
 $color-orangered: #f95139;
