--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,20 +1,14 @@
 .header {
-  background-color: #fff;
-  position: sticky;
-  top: 0;
-  z-index: 100;
+  border-bottom: 1px solid $color-lightgray;
+}
 
-  .header-inner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 3rem 2rem;
-    margin: auto;
-    max-width: 48rem;
-  }
+.header-titlebar {
+  background-color: $color-dark;
+  color: $color-light;
+  display: flex;
+  padding: 0.5em 1em;
+}
 
-  .header-nav {
-    border-top: 1px solid #efefef;
-    border-bottom: 1px solid #efefef;
-  }
+.header-searchbar {
+  background-color: $color-white;
 }
