--- a/public/stylesheet/style.sass
+++ b/public/stylesheet/style.sass
@@ -19,7 +19,7 @@ $pop-up-content : #ffffff
 .pop-up
     z-index: 1
     position: fixed
-    display: flex
+    display: none
     align-items: center
     justify-content: center
     width: 100vw
