--- a/client/index.css
+++ b/client/index.css
@@ -23,6 +23,7 @@ header{
     width: 1200px;
     margin:auto;
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -185,4 +186,32 @@ header{
     height: 40px;
     font-size: 15px;
     background-color: lightgreen;
+}
+
+.filter-cards-container{
+    
+    
+}
+
+.filter-cards {
+    border-radius: 5px;
+    background-color: white;
+    height: 30px;
+    width: 500px;
+    border: 1px solid darkgray;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+}
+
+.filter-cards > input{
+    border: none;
+    margin: 5px;
+    background: none;
+    width: 450px;
+    font-size: 14px;
+}
+.filter-cards > .search-icon{
+    padding-left: 10px;
+    padding-top: 7px;
 }
