--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -17,6 +17,47 @@ input {
   z-index: 200;
 }
 
+.modal {
+  position: fixed;
+  z-index: 1;
+  padding-top: 300px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border-radius: 7px;
+  width: 20%;
+  text-align: center;
+}
+
+.btn-close-modal {
+  width: 25%;
+  background-color: #dddee2;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: 600;
+  padding: 0.5em;
+}
+
+.btn-accept-modal {
+  width: 25%;
+  background-color: #3495DD;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 600;
+  padding: 0.5em;
+}
+
 .search-blank {
   position: relative;
   border: 1px solid lightgray;
@@ -175,6 +216,7 @@ input {
 
 .card-btn {
   position: absolute;
+  font-size: 20px;
   top: 10px;
   right: 5px;
 }
