--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -2,6 +2,7 @@ $--color-main-bg: #f6f8fa
 $--color-focus-shadow: rgba(3,102,214,0.3)
 $--color-main-gray: #dddee2
 $--color-main-green: #34B370
+$--color-main-blue: #3495DD
 
 input
     outline: none
@@ -18,6 +19,43 @@ input
     font-weight: 700
     line-height: 50px
     z-index: 200
+
+.modal
+  position: fixed
+  z-index: 1
+  padding-top: 300px
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+  background-color: rgb(0,0,0)
+  background-color: rgba(0,0,0,0.3)
+  
+.modal-content
+    background-color: #fefefe
+    margin: auto
+    padding: 20px
+    border-radius: 7px
+    width: 20%
+    text-align: center
+
+.btn-close-modal
+    width: 25%
+    background-color: $--color-main-gray
+    border-radius: 5px
+    font-size: 15px
+    font-weight: 600
+    padding: 0.5em
+
+.btn-accept-modal
+    width: 25%
+    background-color: $--color-main-blue
+    border-radius: 5px
+    color: #ffffff
+    font-size: 15px
+    font-weight: 600
+    padding: 0.5em
 
 .search-blank
     position: relative
@@ -141,6 +179,7 @@ input
 
 .card-btn
     position: absolute
+    font-size: 20px
     top: 10px
     right: 5px
 .search-btn>img
