Add Modal Layout to list item 리스트뷰 아이템의 추가/삭제에 대한 모달 뷰를 구현하고 어떤 것이 삭제 대상인지 나타나게 하였습니다.

--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -139,6 +139,10 @@ input
 .list-input:focus-within
     border: 1px solid #0366d6
 
+.list-view:focus-within
+    border: 1px solid #0366d6
+    box-shadow: 0 0 0 3px $--color-focus-shadow
+
 .btn-add-list
     width: 48%
     float: left
