--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -169,6 +169,12 @@ input {
   border: 1px solid #0366d6;
 }
 
+.list-view:focus-within {
+  border: 1px solid #0366d6;
+  -webkit-box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+          box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+}
+
 .btn-add-list {
   width: 48%;
   float: left;
