이전 적용사항들 다시 일괄 commit 잘못된 디렉토리에서 커밋을 하고 있어서 새 수정사항들을 일괄적으로 반영하였습니다.

--- a/client/stylesheets/todo.css
+++ b/client/stylesheets/todo.css
@@ -30,13 +30,74 @@ input {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.modal-content {
+.modal-header {
+  background-color: #3495DD;
+  padding: 20px;
+  border-radius: 10px 10px 0 0;
+}
+
+.modal-header-title {
+  color: white;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.modal-remove {
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
   border-radius: 7px;
   width: 20%;
   text-align: center;
+}
+
+.modal-edit {
+  background-color: #fefefe;
+  margin: auto;
+  border-radius: 10px;
+  width: 50%;
+  max-width: 600px;
+  min-height: 300px;
+}
+
+.modal-input-wrapper {
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid lightgray;
+}
+
+.modal-save-wrapper {
+  padding: 1em;
+}
+
+.modal-input {
+  width: 90%;
+  min-height: 100px;
+  border-radius: 5px;
+  resize: vertical;
+  padding: 0.5em;
+  border: 1px solid #dddee2;
+  font-size: 18px;
+}
+
+.btn-edit-close-modal {
+  float: right;
+  color: white;
+  font-size: 35px;
+}
+
+.btn-edit-close-modal:hover {
+  color: yellow;
+}
+
+.btn-save-modal {
+  width: 170px;
+  float: left;
+  background-color: #34B370;
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 0.7em;
 }
 
 .btn-close-modal {
@@ -135,7 +196,7 @@ input {
 
 .card-header {
   position: relative;
-  margin: 7px;
+  margin: 10px 7px 15px 7px;
 }
 
 .card-count {
@@ -143,9 +204,10 @@ input {
   height: 25px;
   display: inline-block;
   border-radius: 50%;
-  background-color: lightgray;
+  background-color: #3495DD;
+  color: white;
   text-align: center;
-  line-height: 25px;
+  line-height: 27px;
 }
 
 .input-list-view {
@@ -167,12 +229,6 @@ input {
 
 .list-input:focus-within {
   border: 1px solid #0366d6;
-}
-
-.list-view:focus-within {
-  border: 1px solid #0366d6;
-  -webkit-box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
-          box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
 }
 
 .btn-add-list {
@@ -204,6 +260,21 @@ input {
   position: relative;
   -webkit-box-shadow: 0px 1px 2px lightgray;
           box-shadow: 0px 1px 2px lightgray;
+  cursor: pointer;
+}
+
+.list-view:hover {
+  border: 1px solid #0366d6;
+  -webkit-box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+          box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+  background-color: #EFF8FD;
+}
+
+.list-view:focus-within {
+  border: 1px solid #0366d6;
+  -webkit-box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+          box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+  background-color: #EFF8FD;
 }
 
 .title {
@@ -222,19 +293,22 @@ input {
 
 .card-btn {
   position: absolute;
-  font-size: 20px;
+  font-size: 22px;
   top: 10px;
   right: 5px;
+}
+
+.card-btn:hover {
+  color: #3495DD;
+}
+
+.card-btn:focus {
+  color: #3495DD;
 }
 
 .search-btn > img {
   width: 18px;
   height: 18px;
-}
-
-.card-btn > img {
-  width: 14px;
-  height: 14px;
 }
 
 .htop {
@@ -440,6 +514,7 @@ input {
 }
 
 .bold {
+  font-size: 19px;
   font-weight: 700;
 }
 
