--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,6 +72,21 @@
   font-weight: 500;
 }
 
+.card-title {
+  width: 350px;
+  height: 30px;
+  float: left;
+}
+
+.remove-card {
+  text-align: right;
+  margin-right: 20px;
+  font-size: 16px;
+  font-weight: 900;
+  color: #424242;
+  cursor: pointer;
+}
+
 .todo-author {
   margin: 15px 0 13px 0;
   font-size: 14px;
@@ -106,16 +121,16 @@
 .title-add {
   margin: -7px 0 0 360px;
   font-size: 35px;
-  font-weight: 500;
   color: #424242;
   cursor: pointer;
 }
 
 .title-delete {
-  margin: -6px 0 0 395px;
-  font-size: 30px;
-  font-weight: 500;
+  margin: 1px 0 0 395px;
+  font-size: 20px;
+  font-weight: 900;
   color: #424242;
+  cursor: pointer;
 }
 
 .todo-add {
