--- a/src/scss/_kanban.scss
+++ b/src/scss/_kanban.scss
@@ -5,25 +5,39 @@
 }
 
 .kanban {
-  height: 100%;
   display: inline-flex;
+  height: 100%;
 
-  .column {
-    background-color: $color-light;
-    border: 1px solid $color-lightgray;
-    border-radius: 1em;
+  .children-wrapper {
+    display: flex;
 
-    width: 24em;
-    height: 100%;
+    .column {
+      background-color: $color-light;
+      border: 1px solid $color-lightgray;
+      border-radius: 1em;
 
-    padding: 1em;
-    & + .column {
-      margin-left: 1em;
-    }
+      display: flex;
+      flex-direction: column;
 
-    .note-wrapper {
+      width: 24em;
       height: 100%;
-      overflow: scroll;
+
+      padding: 0.5em 1em;
+      & + .column {
+        margin-left: 1em;
+      }
+
+      .children-wrapper {
+        height: 100%;
+        overflow: scroll;
+
+        .note {
+          border: 1px solid $color-lightgray;
+          border-radius: 0.5em;
+          padding: 0.5em 1em;
+          background-color: $color-bright;
+        }
+      }
     }
   }
 }
