--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -193,6 +193,10 @@ input
 .list-input:focus-within
     border: 1px solid #0366d6
 
+.list-edit
+    top: 0
+    right: 25px
+
 .btn-add-list
     width: 48%
     float: left
@@ -220,6 +224,7 @@ input
     position: relative
     box-shadow: 0px 1px 2px lightgray
     cursor: pointer
+    width: 320px
 
 .list-view:hover
     border: 1px solid #0366d6
@@ -335,3 +340,6 @@ $i: 1
 
 .font-white
     color: white
+
+.inline-block
+    display: inline-block
