--- a/views/index.html
+++ b/views/index.html
@@ -16,14 +16,12 @@
       <button class="ml-auto light">☰ Menu</button>
     </div>
     <!-- Search Bar -->
-    <div class="header-searchbar py-2">
-      <div class="container">
-        <input type="text" name="input_search" id="input_search" placeholder="Filter cards">
-      </div>
+    <div class="header-searchbar px-3 py-2">
+      <input type="text" name="input_search" id="input_search" placeholder="Filter cards">
     </div>
   </header>
 
-  <div id="kanban_box" class="kanban-wrapper container flex-auto py-3">
+  <div id="kanban_box" class="kanban-wrapper flex-auto p-3">
     <!-- Kanban here -->
   </div>
 </body>
