--- a/src/scss/_kanban.scss
+++ b/src/scss/_kanban.scss
@@ -29,14 +29,16 @@
     }
 
     .children-wrapper {
+      display: block;
       height: 100%;
       overflow: scroll;
 
       .note {
+        background-color: $color-bright;
         border: 1px solid $color-lightgray;
         border-radius: 0.5em;
         padding: 0.5em 1em;
-        background-color: $color-bright;
+        margin-bottom: 0.5em;
       }
     }
   }
