--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -159,7 +159,23 @@ input
     border-radius: 6px
     margin: 10px
     width: 355px
-    min-height: 600px
+    min-height: 500px
+
+.card-new
+    background-color: #ffffff
+    padding: 5px
+    border: 1px dashed gray
+    border-radius: 6px
+    margin: 10px
+    width: 355px
+    height: 180px
+    text-align: center
+    line-height: 180px
+    cursor: pointer
+
+.card-new:hover
+    border: 1px dashed #0366d6
+    box-shadow: 0 0 0 3px $--color-focus-shadow
 
 .card-header
     position: relative
