--- a/client/stylesheets/todo.sass
+++ b/client/stylesheets/todo.sass
@@ -93,6 +93,15 @@ input
     font-size: 20px
     padding: 0.7em
 
+.btn-write-modal
+    width: 170px
+    float: left
+    background-color: $--color-main-green
+    border-radius: 10px
+    color: #ffffff
+    font-size: 20px
+    padding: 0.7em
+
 .btn-close-modal
     width: 25%
     background-color: $--color-main-gray
@@ -145,6 +154,7 @@ input
     display: flex
     align-items: flex-start
     justify-content: left
+    flex-wrap: wrap
 
 .flex
     display: flex
@@ -168,9 +178,9 @@ input
     border-radius: 6px
     margin: 10px
     width: 355px
-    height: 180px
+    height: 150px
     text-align: center
-    line-height: 180px
+    line-height: 150px
     cursor: pointer
 
 .card-new:hover
